--- a/index.html
+++ b/index.html
@@ -274,47 +274,47 @@
         // Base de datos de productos
         const products = [
             // Fragancias
-            { name: "frag allyn", pricePerGram: 108.3, category: "fragancia" },
-            { name: "frag algodón", pricePerGram: 104.2, category: "fragancia" },
-            { name: "frag bamboo", pricePerGram: 79.2, category: "fragancia" },
-            { name: "frag brisa del mar", pricePerGram: 100.0, category: "fragancia" },
-            { name: "frag brisa del campo", pricePerGram: 83.3, category: "fragancia" },
-            { name: "frag BRISA MARINA", pricePerGram: 141.7, category: "fragancia" },
-            { name: "frag café", pricePerGram: 145.8, category: "fragancia" },
-            { name: "frag canela", pricePerGram: 79.2, category: "fragancia" },
-            { name: "frag carro nuevo", pricePerGram: 145.8, category: "fragancia" },
-            { name: "frag cherry (cereza)", pricePerGram: 95.8, category: "fragancia" },
-            { name: "frag chicle", pricePerGram: 95.8, category: "fragancia" },
-            { name: "frag citronela", pricePerGram: 87.5, category: "fragancia" },
-            { name: "frag durazno", pricePerGram: 118.3, category: "fragancia" },
-            { name: "frag flor de amoha", pricePerGram: 141.7, category: "fragancia" },
-            { name: "frag fresa", pricePerGram: 154.2, category: "fragancia" },
-            { name: "frag frutal", pricePerGram: 120.8, category: "fragancia" },
-            { name: "frag jardín", pricePerGram: 105.8, category: "fragancia" },
-            { name: "frag lavanda fabulosa", pricePerGram: 120.8, category: "fragancia" },
-            { name: "frag lima limón", pricePerGram: 133.3, category: "fragancia" },
-            { name: "frag limón peel", pricePerGram: 91.7, category: "fragancia" },
-            { name: "frag magic flowers", pricePerGram: 91.7, category: "fragancia" },
-            { name: "frag mandarina", pricePerGram: 104.2, category: "fragancia" },
-            { name: "frag manzana", pricePerGram: 100.0, category: "fragancia" },
-            { name: "frag maracuyá", pricePerGram: 150.8, category: "fragancia" },
-            { name: "frag patilla melón", pricePerGram: 75.2, category: "fragancia" },
-            { name: "frag pino navidad", pricePerGram: 76.7, category: "fragancia" },
-            { name: "frag piña", pricePerGram: 112.5, category: "fragancia" },
-            { name: "frag rosa", pricePerGram: 70.8, category: "fragancia" },
-            { name: "frag sierra nevada", pricePerGram: 145.8, category: "fragancia" },
-            { name: "frag talco", pricePerGram: 125.2, category: "fragancia" },
-            { name: "frag uva", pricePerGram: 102.5, category: "fragancia" },
-            { name: "frag vainilla", pricePerGram: 79.2, category: "fragancia" },
+            { name: "Frag Ailyn", pricePerGram: 108.3, category: "fragancia" },
+            { name: "Frag Algodón", pricePerGram: 108.3, category: "fragancia" },
+            { name: "Frag Bamboo", pricePerGram: 79.2, category: "fragancia" },
+            { name: "Frag Brisa Del Mar", pricePerGram: 100.0, category: "fragancia" },
+            { name: "Frag Brisa Del Campo", pricePerGram: 83.3, category: "fragancia" },
+            { name: "Frag Brisa Marina", pricePerGram: 141.7, category: "fragancia" },
+            { name: "Frag Café", pricePerGram: 150.0, category: "fragancia" },
+            { name: "Frag Canela", pricePerGram: 83.3, category: "fragancia" },
+            { name: "Frag Carro Nuevo", pricePerGram: 145.8, category: "fragancia" },
+            { name: "Frag Cherry (Cereza)", pricePerGram: 95.8, category: "fragancia" },
+            { name: "Frag Chicle", pricePerGram: 95.8, category: "fragancia" },
+            { name: "Frag Citronela", pricePerGram: 87.5, category: "fragancia" },
+            { name: "Frag Durazno", pricePerGram: 118.3, category: "fragancia" },
+            { name: "Frag Flor De Amoha", pricePerGram: 141.7, category: "fragancia" },
+            { name: "Frag Fresa", pricePerGram: 154.2, category: "fragancia" },
+            { name: "Frag Frutal", pricePerGram: 120.8, category: "fragancia" },
+            { name: "Frag Jardín", pricePerGram: 105.8, category: "fragancia" },
+            { name: "Frag Lavanda Fabulosa", pricePerGram: 120.8, category: "fragancia" },
+            { name: "Frag Lima Limón", pricePerGram: 133.3, category: "fragancia" },
+            { name: "Frag Limón Peel", pricePerGram: 91.7, category: "fragancia" },
+            { name: "Frag Magic Flowers", pricePerGram: 91.7, category: "fragancia" },
+            { name: "Frag Mandarina", pricePerGram: 104.2, category: "fragancia" },
+            { name: "Frag Manzana", pricePerGram: 100.0, category: "fragancia" },
+            { name: "Frag Maracuyá", pricePerGram: 150.8, category: "fragancia" },
+            { name: "Frag Patilla Melón", pricePerGram: 79.2, category: "fragancia" },
+            { name: "Frag Pino Navidad", pricePerGram: 76.7, category: "fragancia" },
+            { name: "Frag Piña", pricePerGram: 112.5, category: "fragancia" },
+            { name: "Frag Rosa", pricePerGram: 70.8, category: "fragancia" },
+            { name: "Frag Sierra Nevada", pricePerGram: 145.8, category: "fragancia" },
+            { name: "Frag Talco", pricePerGram: 129.2, category: "fragancia" },
+            { name: "Frag Uva", pricePerGram: 102.5, category: "fragancia" },
+            { name: "Frag Vainilla", pricePerGram: 79.2, category: "fragancia" },
             // Productos químicos
             { name: "Betaína", pricePerGram: 17.0, category: "quimico" },
-            { name: "cocoamida", pricePerGram: 33.0, category: "quimico" },
-            { name: "dodigen", pricePerGram: 25.0, category: "quimico" },
-            { name: "glicerina", pricePerGram: 12.5, category: "quimico" },
-            { name: "nonil", pricePerGram: 29.0, category: "quimico" },
-            { name: "procide", pricePerGram: 20.0, category: "quimico" },
-            { name: "rinsol", pricePerGram: 25.0, category: "quimico" },
-            { name: "silicona emulsionable x gramos", pricePerGram: 36.7, category: "quimico" }
+            { name: "Cocoamida", pricePerGram: 33.0, category: "quimico" },
+            { name: "Dodigen", pricePerGram: 25.0, category: "quimico" },
+            { name: "Glicerina", pricePerGram: 12.5, category: "quimico" },
+            { name: "Nonil", pricePerGram: 29.0, category: "quimico" },
+            { name: "Procide", pricePerGram: 20.0, category: "quimico" },
+            { name: "Rinsol", pricePerGram: 25.0, category: "quimico" },
+            { name: "Silicona emulsionable x gramos", pricePerGram: 36.7, category: "quimico" }
         ];
 
         const containers = [
