--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Calculadora de Fragancias</title>
-    <script type="text/javascript" src="https://gc.kis.v2.scr.kaspersky-labs.com/FD126C42-EBFA-4E12-B309-BB3FDD723AC1/main.js?attr=8CcUPfhHfa5wtdgbpp3d3EbT21JZ765VgOodWtRIknvHmJKu7tcC6COwsz037tTvwCnYTgGbzIH68A1fbVfg20GYc5uiEcHp1o9DdziEmHFwHxbYnLmE9OOtOpBo5fi79Js6XZFLkegQ6X5DREjAkbyNzTuR84g4BgvXD5mxQbkpDP5e72eYYcjsy9GL2CEVP0Hd7_vEpts7zKyoh1fTCK0gtivdedJ1SnSG_LhbHkUkCiB446Ld86VlRs-3vMH3sesVm4Ri9_4nY4Zb0UX6Ng" charset="UTF-8"></script><link rel="stylesheet" crossorigin="anonymous" href="https://gc.kis.v2.scr.kaspersky-labs.com/E3E8934C-235A-4B0E-825A-35A08381A191/abn/main.css?attr=aHR0cHM6Ly9jZG4uZGlzY29yZGFwcC5jb20vYXR0YWNobWVudHMvNjY1NzQ3ODM5Mzg0ODEzNTc4LzEzODkzMTg2MDIyMjU3NTAwMTYvaW5kZXguaHRtbD9leD02ODY0MmY0NyZpcz02ODYyZGRjNyZobT1jMWRkNGU0N2YzMWY4NDYzZTg4MjhhOTcxMTYwZTc1ZmNlMGYxNzBjYjFiYzAyNTg5YTY1NmJkMmRlOGRhMTNhJg"/><script src="https://cdn.tailwindcss.com"></script>
+<script src="https://cdn.tailwindcss.com"></script>
     <script>
         tailwind.config = {
             theme: {
